[gd_scene load_steps=2 format=3 uid="uid://vq3dxl1s5h3r"]

[ext_resource type="Script" path="res://example/example_navigation.gd" id="1"]

[node name="Navigation" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
script = ExtResource("1")

[node name="Button" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Dynamic Wheel"

[node name="Button2" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Card Deck"

[node name="Button3" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Dice Array"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
